Count the callers in what was compiled, and drop an argument nobody reads
Two things the change left behind.

`made` still took the type an axis used to hold. Nothing there reads it now: an
axis is named after its number and holds no type, and the two callers were
handing over a value that goes nowhere.

And the check on how many places work a term's orders out read the sources for a
spelling. A call can be written more ways than that — a static import drops the
class name, a lambda puts the call in a class of its own, and a line break
between the name and the method puts it past a search for `TermOrdering.of(`.
Confirmed by writing each of those: the split call is invisible to a source
search and the class files carry it. So the count is read off `target/classes`,
the way this package already asks who calls a reading, with a positive control
so that a scan reading nothing is a failure rather than a pass.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>